# uni-projects

./: README.md
LLVM-Translation-Tool/: building_llvm_readme.txt  installFlang.sh  installLLVM.sh  pullLLVM.sh
LLVM-Translation-Tool/experiment_pass/: CMakeLists.txt  build_pass.sh  run_pass.sh
LLVM-Translation-Tool/experiment_pass/experimentpass/: experimentpass.cpp
LLVM-Translation-Tool/src/: .gitignore  CMakeLists.txt  after_pass_llvm.sh  build_pass.sh  execute_pass.sh  execute_pass_c.sh  execute_pass_optimized.sh  format_code.sh  get_rtlib_function_name.sh  linked_list.h  matrix_alloc_test.cpp  mpi_list.h  openmp_list.h  run_pass.sh  run_pass_c.sh  run_pass_with_additional_statistics.sh  shared_openmp.c  shared_openmp.cpp
LLVM-Translation-Tool/src/omp2mpi/: CMakeLists.txt  ParallelEntryFunction.cpp  ParallelEntryFunction.h  ParallelFunction.cpp  ParallelFunction.h  ParallelTaskEntry.cpp  ParallelTaskEntry.h  SCCP.cpp  SCCP.h  SharedArray.cpp  SharedArray.h  SharedSingleValue.cpp  SharedSingleValue.h  SharedVariable.cpp  SharedVariable.h  environment.h  external_functions.cpp  external_functions.h  helper.cpp  helper.h  omp2mpi.cpp  replace_pragmas.cpp  replace_pragmas.h  struct_pointer.cpp  struct_pointer.h  task_pragma.cpp  task_pragma.h
LLVM-Translation-Tool/src/omp2mpi/comm_patterns/: array_distribution.cpp  commPatterns.h  default.cpp  push_update.cpp  task.cpp
LLVM-Translation-Tool/src/omp2mpi/pragmaHandler/: CMakeLists.txt  PragmaHandlerPlugin.cpp
LLVM-Translation-Tool/src/rtlib/: array.cpp  array.h  general.cpp  general.h  legacy.cpp  mpi_mutex.cpp  mpi_mutex.h  rtlib-profiling.cpp  rtlib-profiling.h  rtlib.cpp  rtlib.h  rtlib_typedefs.h  tasklib.cpp  (+8 more)
image-processing/src/: Ablaufsteuerung.rkt  AdvBestTurnKIWorld.rkt  BestTurnKIWorld.rkt  Bildertest.rkt  Bildverarbeitung.rkt  RandomKIWorld.rkt  ResizeRolit.rkt  RolitWorld.rkt  Spiellogik.rkt  Universe.rkt
lisp-machine/src/: constants.vhd  reg.vhd  regIni.vhd
performance-evaluation/src/: CPUmetrics.c  Makefile  analyze.c  cache.c  configure.c  constants.h  datatypes.h  diskmetrics.c  kmeans.h  measure.c  measure.h  metric1.c  metric_definitions.c  metric_definitions.h  netmetrics.c  omp_kmeans.c
(+66 files in other folders)
